# FinovRelance

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONSIGNES-DEV-LOCAL.txt  COOLIFY-CONFIG.md  Dockerfile  SCALABILITY-TESTS.txt  admin_forms.py  admin_webhook_routes.py  app.py  auth_error_handler.py  bc_sync_helpers.py  business_central_connector.py  check_email_support_status.py  constants.py  cookies.txt  db_utils.py  docker-compose.yml  docker-entrypoint.sh  email_fallback.py  file_import_connector.py  forms.py  gmail_smtp.py  gunicorn.conf.py  import_progress.py  import_worker.py  init_admin_system.py  microsoft_oauth.py  models.py  notification_routes.py  notification_system.py  oauth_callback.py  odoo_connector.py  onboarding_models.py  outlook_email_sync.py  pennylane_connector.py  permissions.py  pyproject.toml  quickbooks_connector.py  (+14 more)
.agents/: agent_assets_metadata.toml
.claude/: settings.json
docs/: MIGRATION-FINOVRELANCE-VPS.md  PLAN-COOKIE-CONSENT-UPGRADE.md  PLAN-PENNYLANE-CONNECTOR.md  PROMPT-CLAUDE-CODE.md  PROMPT-REPLIT.md  SECURITY-SPRINT.md  TKO-CLAUDE-INSTRUCTIONS.md  structure_technique.md
jobs/: apply_pending_changes.py  cleanup_old_logs.py  database_backup.py  refresh_accounting_tokens.py  refresh_email_tokens.py  sync_email_v3.py
scripts/: create_test_user.py  deploy_first_time.sh  migrate_dashboard_indexes.py  migrate_db.py  migrate_encryption.py  rechiffrer_tokens.py
security/: csp_middleware.py  encryption_service.py  secure_logging.py
static/: site.webmanifest
templates/: base.html  base_dev.html  base_minimal.html  (+5 more)
(+207 files in other folders)
